--- a/action.yml
+++ b/action.yml
@@ -31,22 +31,30 @@ runs:
       with:
         go-version: '1.24'
         
+    - name: Checkout issue-eval code
+      uses: actions/checkout@v4
+      with:
+        repository: prestist/issue-eval
+        path: issue-eval-action
+        
     - name: Cache Go modules
       uses: actions/cache@v4
       with:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-issue-assistant-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-issue-eval-${{ hashFiles('issue-eval-action/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-go-issue-assistant-
+          ${{ runner.os }}-go-issue-eval-
           
     - name: Download dependencies
       shell: bash
+      working-directory: issue-eval-action
       run: go mod download
       
     - name: Run issue-eval
       shell: bash
+      working-directory: issue-eval-action
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }}
         GOOGLE_AI_API_KEY: ${{ inputs.google-ai-api-key }}
